// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> does not overwrite materialize-css classnames 1`] = `
<Checkbox
  className="my-class"
  filledIn={true}
  id="Checkbox_mockId"
  label="red"
  value="red"
>
  <label
    htmlFor="Checkbox_mockId"
  >
    <input
      className="filled-in my-class"
      id="Checkbox_mockId"
      onChange={[Function]}
      type="checkbox"
      value="red"
    />
    <span>
      red
    </span>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> filled-in 1`] = `
<label
  htmlFor="Checkbox_mockId"
>
  <input
    className="filled-in"
    id="Checkbox_mockId"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders 1`] = `
<label
  htmlFor="Checkbox_mockId"
>
  <input
    className=""
    id="Checkbox_mockId"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders disabled 1`] = `
<label
  htmlFor="Checkbox_mockId"
>
  <input
    className=""
    disabled={true}
    id="Checkbox_mockId"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with id 1`] = `
<label
  htmlFor="test"
>
  <input
    className=""
    id="test"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;
